src/objects/LASH_Provider_Subscription__c.object
<CustomObject>
    <description>Portal Object : Relationships of a provider to a subscription.</description>
    <fields>
        <fullName>LASH_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship between Provider Subscription and Contact [ Contact --&gt; External users]</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>For Portal user needs record type</errorMessage>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>LASH_Portal_User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Provider_Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Disaffiliation_Date__c</fullName>
        <label>Disaffiliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_First_Login_Failed_Time__c</fullName>
        <label>First Login Failed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LASH_Is_User_Active__c</fullName>
        <formula>LASH_Portal_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_LastPasswordChangeDate__c</fullName>
        <description>For storing the last Password change/ Reset date</description>
        <label>Last Password Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LASH_NPIProviderSubscriptions__c</fullName>
        <description>it will store the combination of NPI and Subscription . this field is populate by Apex code at the time of insert</description>
        <label>NPIProviderSubscriptions</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LASH_No_of_Invalid_Attempts__c</fullName>
        <label>No of Invalid Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Password_Status__c</fullName>
        <formula>IF(((Now()- LASH_LastPasswordChangeDate__c ) &gt;  LASH_Subscription__r.LASH_Subscription_expiry_Date__c), &quot;Expired&quot;, &quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Password Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Answer_1__c</fullName>
        <label>Portal User Answer 1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Answer_2__c</fullName>
        <description>Stores the answer</description>
        <label>Portal User Answer 2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Answer_3__c</fullName>
        <description>Stores the Answer</description>
        <label>Portal User Answer 3</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Name__c</fullName>
        <label>Portal User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Question_1__c</fullName>
        <description>Sotres the question</description>
        <label>Portal User Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Question_2__c</fullName>
        <description>Stores the question</description>
        <label>Portal User Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Question_3__c</fullName>
        <label>Portal User Question 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal User Setup</label>
        <referenceTo>LASH_Portal_User_Setup__c</referenceTo>
        <relationshipLabel>Provider Subscriptions</relationshipLabel>
        <relationshipName>Provider_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Provider_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Provide_EmailId__c</fullName>
        <description>For displaying Email ID</description>
        <formula>LASH_Provider__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provide Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Provider_NPINo__c</fullName>
        <description>For displaying the NPI Number</description>
        <formula>LASH_Provider__r.APS_NPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Provider__c</fullName>
        <description>MD Relationship between Provider and Subscription.</description>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Subscriptions</relationshipLabel>
        <relationshipName>Provider_Subscriptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LASH_QDE_External_ID__c</fullName>
        <description>This field is created as part of QDE Module</description>
        <externalId>true</externalId>
        <label>QDE External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Subscription__c</fullName>
        <description>Relationship between Provider Subscription Object and Subscription Object</description>
        <label>Subscription</label>
        <referenceTo>LASH_Subscription__c</referenceTo>
        <relationshipName>Provider_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LASH_Temporary_Password_Status__c</fullName>
        <formula>IF(NOT(ISBLANK( LASH_LastPasswordChangeDate__c )),null,IF(((Now()- CreatedDate) &gt;= LASH_Subscription__r.LASH_Temporary_Password_Expiration__c), &quot;Expired&quot;, &quot;Active&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temporary Password Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_isFirstLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When a new record is created for a user this checkbox is checked, after user logs in for the first time this check box is unchecked</description>
        <label>Is First Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lash_userName__c</fullName>
        <description>For displaying the user name</description>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserName</label>
        <type>Text</type>
    </fields>
    <label>Provider Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Provider Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>